--- a/package.json
+++ b/package.json
@@ -1,17 +1,37 @@
 {
   "name": "realtime_chat",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "nodemon": "^2.0.7",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-scripts": "4.0.3",
+    "socket.io": "^3.1.2",
+    "web-vitals": "^1.0.1"
+  },
   "scripts": {
     "devStart": "nodemon server.js"
   },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "socket.io": "^2.3.0"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
-  "devDependencies": {
-    "nodemon": "^2.0.4"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
